# famly-fetch

./: .actrc  .gitignore  Authenticate.graphql  Dockerfile  GetChildNotes.graphql  LICENSE  Makefile  README.md  api_client.py  ci-local.Dockerfile  dev.Dockerfile  docker-compose.yaml  fetch.py  fetch_from_messages.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi-publish.yml
scripts/: ci-local.sh
src/famly_fetch/: __init__.py  api_client.py  cli.py  downloader.py  file.py  image.py  video.py
src/famly_fetch/graphql/: GetChildNotes.graphql  LearningJourneyQuery.graphql
