[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "famly-fetch"
version = "0.1.2"
authors = [
    { name = "Jacob Bunk Nielsen" },
    { name = "Morten Siebuhr" },
    { name = "iLeoDo", email = "iLeoDo@gmail.com" },
]
description = "Fetch your (kid's) images from famly.co"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["piexif==1.1.3", "click"]

[project.optional-dependencies]
dev = ["black", "build", "twine"]

[project.scripts]
famly-fetch = "fetch:main"

[tool.black]
line-length = 88

[tool.setuptools]
py-modules = ["api_client", "fetch"]
